; ModuleID = '/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_alloc_aux_history_data.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/text/extr_text-data.c_alloc_aux_history_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@alloc_history_strings = common dso_local global i32 0, align 4
@alloc_history_strings_size = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32)* @alloc_aux_history_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @alloc_aux_history_data(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ule i32 %6, 65535
  %8 = zext i1 %7 to i32
  %9 = call i32 @assert(i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = add nsw i32 %10, 3
  %12 = call i8* @malloc(i32 %11)
  %13 = getelementptr inbounds i8, i8* %12, i64 2
  store i8* %13, i8** %5, align 8
  %14 = load i32, i32* %4, align 4
  %15 = trunc i32 %14 to i16
  %16 = load i8*, i8** %5, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 -2
  %18 = bitcast i8* %17 to i16*
  store i16 %15, i16* %18, align 2
  %19 = load i8*, i8** %5, align 8
  %20 = load i8*, i8** %3, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @memcpy(i8* %19, i8* %20, i32 %21)
  %23 = load i8*, i8** %5, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i8, i8* %23, i64 %25
  store i8 0, i8* %26, align 1
  %27 = load i32, i32* @alloc_history_strings, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* @alloc_history_strings, align 4
  %29 = load i32, i32* %4, align 4
  %30 = add nsw i32 %29, 3
  %31 = load i32, i32* @alloc_history_strings_size, align 4
  %32 = add nsw i32 %31, %30
  store i32 %32, i32* @alloc_history_strings_size, align 4
  %33 = load i8*, i8** %5, align 8
  ret i8* %33
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
